# DeutschBuddy

./: .env.example  .gitignore  README.md  a1-vocabulary.md  ca.md  german_tutor_architecture.md  german_tutor_prompts.md  pyproject.toml
.windsurf/rules/: generic-rules.md  git-rules.md
config/: settings.toml
data/curriculum/A1/: 01_greetings.yaml  02_articles_nominative.yaml  03_verbs_sein_haben.yaml  04_nominative_case.yaml  05_personal_pronouns.yaml  06_accusative_case.yaml  07_indefinite_articles.yaml  08_negation_nicht_kein.yaml  09_regular_verbs.yaml  10_separable_verbs_intro.yaml  11_modal_verbs_intro.yaml  12_question_words.yaml  13_numbers_time.yaml  14_dative_intro.yaml  15_prepositions_accusative.yaml  16_prepositions_dative.yaml  17_adjectives_predicative.yaml  18_word_order_v2.yaml  19_common_phrases.yaml  20_subordinate_clauses_intro.yaml  21_possessive_adjectives.yaml  22_plurals_zero_article.yaml  23_two_way_prepositions.yaml  24_es_gibt_quantities.yaml  25_time_dates_am_im_um.yaml  26_tmp_word_order.yaml  27_perfekt_haben_regular.yaml  28_perfekt_sein_irregular.yaml  29_imperatives_requests.yaml  30_likes_preferences.yaml
data/curriculum/A2/: 01_perfect_tense.yaml  02_perfect_sein.yaml  03_dative_case_deep.yaml  (+12 more)
data/db/: learner.db
data/vocab/: a1.yml  a2.yml
docs/: textual-cli.md
docs/plans/: 2026-03-02-german-tutor.md  2026-03-05-code-review-fixes.md  2026-03-06-voice-conversation-design.md
german_tutor/: app_state.py  main.py
german_tutor/curriculum/: loader.py  spaced_repetition.py  streak.py
german_tutor/db/: migrations.py
german_tutor/llm/: curriculum_agent.py  prompts.py  quiz_agent.py
german_tutor/models/: learner.py  lesson.py
german_tutor/screens/: breakdown.py  help.py  home.py  lesson.py  quiz.py  results.py  settings.py
german_tutor/styles/: main.tcss  theme.tcss
german_tutor/widgets/: grammar_panel.py  progress_bar.py  quiz_card.py  sentence_tree.py  streak_indicator.py
src/deutschbuddy/: app_state.py  config.py  main.py  theme_manager.py  themes.py  voice_conversation.py
src/german_tutor/: app_state.py  main.py
tests/: test_audio_listener.py  test_audio_speaker.py  test_conversation_agent.py  test_curriculum_loader.py  test_vocab_loader.py
(+73 files in other folders)
