[project]
name = "german-tutor"
version = "0.1.0"
description = "AI-powered German language TUI for English speakers"
requires-python = ">=3.11"
dependencies = [
  "textual>=8.0.1",
  "ollama>=0.6.1",
  "aiosqlite>=0.22.1",
  "pydantic>=2.12.5",
  "pyyaml>=6.0.3",
  "rich>=14.3.3",
]

[project.scripts]
german-tutor = "german_tutor.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [  
    "textual-dev>=1.5.1",
    "pytest>=9.0.2",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["german_tutor"]


[tool.coverage.run]
relative_files = true