[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[project]
name = "deutschbuddy"
version = "0.6.5"
description = "AI-powered German language TUI for English speakers"
requires-python = ">=3.11"
dependencies = [
  "textual>=8.0.2",
  "ollama>=0.6.1",
  "aiosqlite>=0.22.1",
  "pydantic>=2.12.5",
  "pyyaml>=6.0.3",
  "rich>=14.3.3",
  "tomlkit>=0.13.2",
]

[project.optional-dependencies]
voice = [
  "SpeechRecognition>=3.14.5",
  "PyAudio>=0.2.14",
  "pyttsx3>=2.99",
  "openai-whisper>=20250625",
]

[project.scripts]
deutschbuddy = "deutschbuddy.main:run"

[dependency-groups]
dev = [
  "textual-dev>=1.8.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=0.21.0",
  "SpeechRecognition>=3.14.5",
  "PyAudio>=0.2.14",
  "pyttsx3>=2.99",
  "openai-whisper>=20250625",
]

[tool.uv.build-backend]
module-root = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"